# dumont-cloud

./: .auto-claude-status  .env.demo  .env.example  .gitignore  .gitignore.test  .mcp.json  API_TEST_ANALYSIS_REPORT.md  AUTO_HIBERNATION_GUIDE.md  CHAT_ARENA_COMMANDS.md  CHAT_ARENA_DEPLOYMENT_REPORT.md  CHAT_ARENA_FINAL_REPORT.json  CHAT_ARENA_SUMARIO.md  CHAT_ARENA_TESTS_README.md  CHAT_ARENA_TEST_SUMMARY.md  CHECKLIST_FLUXOS.md  CLAUDE.md  COMO_CONFIGURAR_SSH.md  COMPONENT_MIGRATION_SUMMARY.md  DEBUGGING_REPORT.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_SUCCESS.txt  Dockerfile  EXECUTIVE_SUMMARY.md  FAILOVER_REAL_TESTS_READY.md  FAILOVER_SUMMARY.md  FAILOVER_TESTING_GUIDE.md  FAILOVER_TESTS_SUMMARY.md  FAILOVER_TEST_RESULTS.json  FAILOVER_VIBE_TEST_SUMMARY.md  FINETUNE_TEST_FILES.md  FINETUNE_VIBE_TEST_SUMMARY.md  GPU_SNAPSHOT_README.md  IMPLEMENTACAO_SNAPSHOT_ANS.md  INICIAR_BUTTON_DEBUG_SUMMARY.md  LIVEDOC_STATUS.md  METRICS_PAGE.md  MODELO_DEPLOY_TEST_INICIO.md  MODEL_DEPLOYMENT_REAL_TEST.json  Makefile  NEXT_STEPS.md  (+107 more)
.claude/: ralph-loop.local.md
Live-Doc/: server.py
agent/: dumont-agent.sh  dumontctl.sh  install.sh
api/: deploy.py  instances.py  snapshots.py
cli/: TEST_SUMMARY.md  __main__.py  babel.cfg  dumont  i18n.py  messages.pot  pyproject.toml  requirements.txt
config/: settings.py
docker/: Dockerfile.worker  entrypoint.sh
docs/: ACOES_PRIORITARIAS_MVP.md  CHAT_ARENA_ERROR_PREVENTION.md  DASHBOARD_SIDE_BY_SIDE_STATUS.md  FAILOVER_SYSTEM.md  (+6 more)
sdk-client/: .gitignore  README.md  pyproject.toml  pytest.ini  setup.py
sdk-client/dumont_sdk/: __init__.py  base.py  circuit_breaker.py  client.py  config.py  dumont_client.py  exceptions.py  failover.py  instances.py  metrics.py  models.py  settings.py  snapshots.py  standby.py  wizard.py
sdk-client/examples/: basic_usage.py  openai_compatible.py
sdk-client/tests/: __init__.py  conftest.py  test_api_keys.py  test_auth.py  test_e2e_scenarios.py  test_failover.py  test_instances.py  test_llm.py  test_metrics.py  test_models.py  test_real_integration.py  test_resilience.py  test_settings.py  test_snapshots.py  test_standby.py  test_wizard.py
(+3489 files in other folders)
