[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dumont-sdk"
version = "0.1.0"
description = "SDK para inferência LLM com failover automático GPU → OpenRouter"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Dumont Cloud", email = "dev@dumontcloud.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.25.0",
    "aiohttp>=3.9.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.8.0",
    "types-aiofiles>=23.2.0",
]

[project.urls]
Homepage = "https://dumontcloud.com"
Repository = "https://github.com/dumontcloud/dumont-sdk"
Documentation = "https://docs.dumontcloud.com/sdk"

[tool.setuptools.packages.find]
where = ["."]
include = ["dumont_sdk*"]

[tool.setuptools.package-data]
dumont_sdk = ["py.typed"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
exclude = ["tests/", "build/", "dist/"]

[[tool.mypy.overrides]]
module = ["aiohttp.*", "httpx.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests",
    "requires_instance: marks tests that require a running instance",
]
